# Digital_Twins

./: .gitignore  ASSIGNMENT_COMPLETION_CHECKLIST.md  COLLISION_GEOMETRY_FIX.md  DRIVING_AND_MAPPING.md  Dockerfile  FINAL_NAV2_INSTRUCTIONS.md  FINAL_STEPS_TO_COMPLETE.md  GAZEBO_SETUP.md  LIDAR_FIX.md  MAP_PATH_FIX.md  MAP_YAML_FIXED.md  NAV2_FIX.md  NAV2_LAUNCH_FIXED.md  NAV2_LAUNCH_NOW.md  PHASE1_VERIFICATION.md  PHASE2_COMPLETE_NEXT_STEPS.md  PHASE2_INSTALL_SCRIPT.sh  PHASE2_INSTALL_SCRIPT_FIXED.sh  PHASE2_STATUS.md  PHASE3_SLAM_READY.md  PHASE4_NAV2_COMPLETE.md  PROGRESS_SUMMARY.md  PUSH_TO_GITHUB.md  QUICK_START.md  QUICK_START_SLAM.md  README.md  REBUILD_INSTRUCTIONS.md  ROBOT_FIXES.md  ROBOT_SPECIFICATIONS.md  ROS2_INSTALLATION_GUIDE.md  ULTIMATE_TODO_COMPLETE.md  build.sh  docker-compose.yml  entrypoint.sh
my_bot/my_bot/: CMakeLists.txt  package.xml
my_bot/my_bot/config/: my_controllers.yaml  visualize.rviz
my_bot/my_bot/config/nav2/: nav2_params.yaml
my_bot/my_bot/description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  sensors.xacro
my_bot/my_bot/launch/: launch_full_nav.launch.py  launch_sim.launch.py  launch_sim_with_rviz.launch.py  launch_sim_with_slam.launch.py  nav2.launch.py  nav2_individual.launch.py  rsp.launch.py  slam.launch.py  visualize.launch.py
my_bot/my_bot/scripts/: activate_nav2_nodes.py  activate_nav2_nodes.sh  diagnose_bt_navigator.py  get_bt_navigator_errors.py  set_initial_pose.py
my_bot/my_bot/worlds/: empty_world.world  kitchen_dining_world.world
my_bot/my_bot/worlds/model/kitchen_dining/: model-1_3.sdf  (+2 more)
